# project-why

./: .gitignore  .gitmodules
cs50-c/: CMakeLists.txt  constants.h  main.c
cs50-c/cs50_tests/: CMakeLists.txt
cs50-c/cs50_tests/further_tests/: further_tests.cpp
cs50-c/cs50_tests/initials_tests/: initials_tests.cpp
cs50-c/cs50_tests/passwords_tests/: passwords_tests.cpp
cs50-c/initials/: CMakeLists.txt  initials.c  initials.h
cs50-c/passwords/: CMakeLists.txt  passwords.c  passwords.h
cs50-python/: cs50.py  initials_extractor.py
cs50-python/all_tests/: test_initialsExtractor.py
cs50-python/helpers/: user_input.py
cs50/psets2/initials/: CMakeLists.txt
cs50/psets2/initials/c/: CMakeLists.txt  main.c
cs50/psets2/initials/python/: initials.py
pong/: build.gradle
pong/core/assets/: pong.atlas
pong/core/src/com/nerus/pong/: Pong.java  PongGDX.java
pong/core/test/com/nerus/pong/: PongTest.java
pong/desktop/: build.gradle
pong/desktop/src/com/nerus/pong/desktop/: DesktopLauncher.java
pong/gradle/wrapper/: gradle-wrapper.properties
pong/src/com/nerus/pong/: GameArea.java  Main.java  Pong.java
pong/src/main/java/com/nerus/pong/: Pong.java
pong/src/test/java/com/nerus/pong/: PongTest.java
pong/test/com/nerus/pong/: GameAreaTest.java  PongTest.java
udemy-python/: Anagram Check.ipynb  h-index metric.ipynb
udemy-python/.ipynb_checkpoints/: Dynamic Array Exercise-checkpoint.ipynb  h-index metric-checkpoint.ipynb
